prep for deployment

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -39,7 +39,9 @@
 
   #searchBackground {
       background-image: url('https://thoughtcatalog.com/wp-content/uploads/2021/06/Anime-Pick-Up-Lines.jpeg');
+      /* background-image: url('https://fiverr-res.cloudinary.com/images/q_auto,f_auto/gigs/158338838/original/56a6c95fe6909338ba872381af39e6bb09cac57b/create-a-anime-background-for-you.png'); */
       height: 100vh;
+      background-size: cover;
   }
 
   #editBackground {
@@ -60,7 +62,28 @@
       -webkit-text-stroke: 0.3vw #383d52;
       text-transform: uppercase; */
   }
+  /* .animeTitle {
+      position: relative;
+      -webkit-text-stroke: 0.3vw #383d52;
+      text-transform: uppercase;
+  }
 
+  .animeTitle::before {
+      content: attr(data-text);
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 0%;
+      height: 100%;
+      color: lightblue;
+      -webkit-text-stroke: 0vw #383d52;
+      border-right: 2px solid lightblue;
+      overflow: hidden;
+      animation:animate 5s linear infinite;
+  }
+   */
+
+  
   /* .animateSignUp::before {
     content: attr(data-text);
     position: absolute;
@@ -86,16 +109,18 @@
       -webkit-text-stroke: 0vw #383d52;
       border-right: 2px solid hotpink;
       overflow: hidden;
-      animation: animate 6s linear infinite;
+      animation: animate 6s infinite linear;
   }
   @keyframes animate {
       0%, 10%, 100%
       {
-        width: 0;  
+          
+        width: 0 
       }
-      70%, 100%
+       70%, 100%
       {
-        width: 100%;
+        
+        width: 100%
       }
   }
 
@@ -119,12 +144,15 @@
 }
 
 .myResult {
-    list-style: none;
+
     border-style: solid;
-    color: black;
-    background-color: white;
+    background-color: black;
     background-image: url('');
     /* height: 100vh; */
+}
+
+.unorderedList {
+    list-style: none;
 }
 
 
