--- a/views/browse.ejs
+++ b/views/browse.ejs
@@ -1,16 +1,16 @@
 
-<nav class="nav navbar-expand-lg bg-light d-flex justify-content-right">
+<nav class="nav navbar-expand-lg bg-light d-flex justify-content-center">
 
-    <div class="container-fluid form-control">
+    
 
-        <a class="navbar-brand" href="/users/logout">Log Out</a> 
-        <a class="navbar-brand" href="/users/profile">Profile</a>
-    </div>
+        <a class="navbar-brand p-1" href="/users/logout">Log Out</a> 
+        <a class="navbar-brand p-1" href="/users/profile">Profile</a>
+  
     
 </nav>
 <div id="searchBackground">
 
-<div class="container d-flex flex-column justify-content-center align-items-center" style="height: 80vh;">
+<div class="container d-flex justify-content-center align-items-center" style="height: 80vh;">
 
         
 
