--- a/views/browse.ejs
+++ b/views/browse.ejs
@@ -19,7 +19,7 @@
                 <input id="search" type="text" name="animeSearch" class="form-control" />
                 <label for="search" class="searchP"></label>
                 <br>
-                <button type="submit">Search</button>
+                <button type="submit" class=" btn btn-primary btn-lg">Search</button>
             </form>
         
         
