--- a/views/details.ejs
+++ b/views/details.ejs
@@ -8,9 +8,11 @@
 <a class="navbar-brand p-2" href='/search'>Search</a> <a class="navbar-brand p-2" href="/users/profile">Profile</a> <a class="navbar-brand p-2" href="/users/logout">Log Out</a>
 
 </nav>
+<div class="detailsPage">
+
+
 
 <% const {title,episodes,rating, synopsis, images, status, duration, background, mal_id} = anime %> 
-
 
 <h1><%=title %></h1>
 <img src="<%=images.jpg.large_image_url%>"/>
@@ -21,49 +23,59 @@
 <p><b>Background: </b></b><%=background%></p>
 <p><b>Status: </b> </b><%= status  %>  </p>
 
+
+
 <form method="POST" action="/users/profile">
     <input hidden value="<%=title%>" name="title"/>
     <input hidden value="<%=mal_id%>" name="mal_id"/>
     <button type="submit">Save Anime!</button>
 </form>
+<div class="mySecondDetails"> 
 
 
 
-<!-- for eac to generate comments -->
-<%animeComment.forEach(comment => {%>
-    <p><%=comment.comment%></p>
-    <p><b><%=comment.user.email%></b></p>
+<div class=" flex-column text-center mb-2">
     
-    <!-- Form to delete the comments -->
-    <form method="POST" action="/anime/<%=mal_id%>/?_method=DELETE">
-        <input hidden value="<%= anime.id %>" name="id"/>
-        <%if (comment.dataValues.user.id === user.id){%>
-            <button type="submit">Delete</button>
-            <%}%>
-        </form>
+    <!-- for each to generate comments -->
+    <%animeComment.forEach(comment => {%>
+        <p><%=comment.comment%></p>
+        <p><b><%=comment.user.email%></b></p>
         
-        
-        <!-- editing -->
-        <form method="GET" action="/anime/edit/<%= mal_id %>">
-            <input hidden type="number" value="<%= comment.id %>" name="id"/>
-            <input hidden type="number" value="<%= anime.id %>" name= "animeId"/>
-            <% if (comment.dataValues.user.id === user.id) {%>
-                <button type="submit">Edit</button>
-                
-                <%}%>
-            </form>
+        <div class="align-items-center d-flex justify-content-center">
+            <!-- Form to delete the comments -->
+            <form method="POST" action="/anime/<%=mal_id%>/?_method=DELETE">
+                <input hidden value="<%= anime.id %>" name="id"/>
+                <%if (comment.dataValues.user.id === user.id){%>
+                    <button type="submit" class="btn btn-primary btn-sm">Delete</button>
+                    <%}%>
+                </form>
+            </div>
             
-            <%})%>
             
-            <!-- <div class=" flex-column d-flex justify-content-center align-items-center"> -->
+            <!-- editing -->
+            <form method="GET" action="/anime/edit/<%= mal_id %>">
+                <input hidden type="number" value="<%= comment.id %>" name="id"/>
+                <input hidden type="number" value="<%= anime.id %>" name= "animeId"/>
+                <% if (comment.dataValues.user.id === user.id) {%>
+                    <button type="submit" class="btn-secondary btn btn-sm">Edit</button>
+                    
+                    <%}%>
+                </form>
                 
-                <!-- creating a comment -->
-            <form method="POST" class="d-flex flex-column w-25 form-control" action="/anime/<%=mal_id%>">
-                
+                <%})%>
+            </div>
+
+
+
+            <div class="align-items-center d-flex justify-content-center">
             
+            <form method="POST" class="d-flex flex-column w-25 form-control text-center" action="/anime/<%=mal_id%>">
                 <input type="text" class="form-control" name="comment" id="create"/>
                 <label for="create">Create Comment</label>
                 <button type="submit">submit</button>
-                </form>
-                  
-            <!-- </div> -->
+            </form>
+        </div>
+    </div>
+
+    </div>
+       
