--- a/views/users/profile.ejs
+++ b/views/users/profile.ejs
@@ -1,12 +1,12 @@
 <link rel="stylesheet" href="../css/style.css"/>
-<nav class="nav navbar-expand-lg  d-flex flex-row-reverse">
+<nav class="nav navbar-expand-lg  d-flex justify-content-center">
     
-    <div class="container-fluid form-control">
+    
         
         <a class="navbar-brand p-2" href="/users/logout">Log Out</a>
         <a class="navbar-brand p-2" href="/search">Search</a>
     
-    </div>
+  
 </nav>
 
 <div id="profilePage">
@@ -17,7 +17,7 @@
     
     
     <h3><b>Welcome to AniSearch <%=user.email%>!</b></h3>
-    <h3><b>Links:</b></h3>
+    <h3><b>Recently Saved:</b></h3>
     <% saveAnime.forEach(anime => {%>
         <ul>
             <li>
