--- a/views/details.ejs
+++ b/views/details.ejs
@@ -1,3 +1,6 @@
+<link rel="stylesheet" href="/css/style.css"/>
+
+
 <nav class="nav navbar-expand-lg  bg-light d-flex justify-content-center">
    
         
@@ -6,76 +9,79 @@
     
     <!-- <div class="container-fluid form-control"> -->
 <a class="navbar-brand p-2" href='/search'>Search</a> <a class="navbar-brand p-2" href="/users/profile">Profile</a> <a class="navbar-brand p-2" href="/users/logout">Log Out</a>
-
 </nav>
-<div class="detailsPage">
 
 
+<div class='detailsPage'>
 
-<% const {title,episodes,rating, synopsis, images, status, duration, background, mal_id} = anime %> 
-
-<h1><%=title %></h1>
-<img src="<%=images.jpg.large_image_url%>"/>
-<p><b>Episode: </b><%=episodes%></p>
-<p><b>Duration: </b> <%=duration %></p>
-<p><b>Rating: </b><%=rating %></p>
-<p><b>Synopsis: </b><%=synopsis%></p>
-<p><b>Background: </b></b><%=background%></p>
-<p><b>Status: </b> </b><%= status  %>  </p>
-
-
-
-<form method="POST" action="/users/profile">
-    <input hidden value="<%=title%>" name="title"/>
-    <input hidden value="<%=mal_id%>" name="mal_id"/>
-    <button type="submit">Save Anime!</button>
-</form>
-<div class="mySecondDetails"> 
-
-
-
-<div class=" flex-column text-center mb-2">
     
-    <!-- for each to generate comments -->
-    <%animeComment.forEach(comment => {%>
-        <p><%=comment.comment%></p>
-        <p><b><%=comment.user.email%></b></p>
+    
+    
+    <% const {title,episodes,rating, synopsis, images, status, duration, background, mal_id} = anime %> 
+    
+    <h1><%=title %></h1>
+    <img src="<%=images.jpg.large_image_url%>"/>
+    <p><b>Episode: </b><%=episodes%></p>
+    <p><b>Duration: </b> <%=duration %></p>
+    <p><b>Rating: </b><%=rating %></p>
+    <p><b>Synopsis: </b><%=synopsis%></p>
+    <p><b>Background: </b></b><%=background%></p>
+    <p><b>Status: </b> </b><%= status  %>  </p>
+    
+    
+    
+    <form method="POST" action="/users/profile">
+        <input hidden value="<%=title%>" name="title"/>
+        <input hidden value="<%=mal_id%>" name="mal_id"/>
+        <button type="submit" class="btn btn-primary btn-sm">Save Anime!</button>
+    </form>
+    <div class="mySecondDetails"> 
         
-        <div class="align-items-center d-flex justify-content-center">
-            <!-- Form to delete the comments -->
-            <form method="POST" action="/anime/<%=mal_id%>/?_method=DELETE">
-                <input hidden value="<%= anime.id %>" name="id"/>
-                <%if (comment.dataValues.user.id === user.id){%>
-                    <button type="submit" class="btn btn-primary btn-sm">Delete</button>
-                    <%}%>
-                </form>
-            </div>
+        
+        
+        <div class=" flex-column text-center mb-2">
             
-            
-            <!-- editing -->
-            <form method="GET" action="/anime/edit/<%= mal_id %>">
-                <input hidden type="number" value="<%= comment.id %>" name="id"/>
-                <input hidden type="number" value="<%= anime.id %>" name= "animeId"/>
-                <% if (comment.dataValues.user.id === user.id) {%>
-                    <button type="submit" class="btn-secondary btn btn-sm">Edit</button>
-                    
-                    <%}%>
-                </form>
+            <!-- for each to generate comments -->
+            <%animeComment.forEach(comment => {%>
+                <p><%=comment.comment%></p>
+                <p><b><%=comment.user.email%></b></p>
                 
-                <%})%>
+                <div class="align-items-center d-flex justify-content-center">
+                    <!-- Form to delete the comments -->
+                    <form method="POST" action="/anime/<%=mal_id%>/?_method=DELETE">
+                        <input hidden value="<%= anime.id %>" name="id"/>
+                        <%if (comment.dataValues.user.id === user.id){%>
+                            <button type="submit" class="btn btn-primary btn-sm">Delete</button>
+                            <%}%>
+                        </form>
+                    </div>
+                    
+                    
+                    <!-- editing -->
+                    <form method="GET" action="/anime/edit/<%= mal_id %>">
+                        <input hidden type="number" value="<%= comment.id %>" name="id"/>
+                        <input hidden type="number" value="<%= anime.id %>" name= "animeId"/>
+                        <% if (comment.dataValues.user.id === user.id) {%>
+                            <button type="submit" class="btn-secondary btn btn-sm">Edit</button>
+                            
+                            <%}%>
+                        </form>
+                        
+                        <%})%>
+                    </div>
+                    
+                    
+                    
+                    <div class="align-items-center d-flex justify-content-center">
+                        
+                        <form method="POST" class="d-flex flex-column w-25 form-control text-center" action="/anime/<%=mal_id%>">
+                            <input type="text" class="form-control" name="comment" id="create"/>
+                            <label for="create">Create Comment</label>
+                            <button type="submit" class="btn btn-primary btn-sm">Submit</button>
+                        </form>
+                    </div>
+                </div>
+                
+                
+                
             </div>
-
-
-
-            <div class="align-items-center d-flex justify-content-center">
-            
-            <form method="POST" class="d-flex flex-column w-25 form-control text-center" action="/anime/<%=mal_id%>">
-                <input type="text" class="form-control" name="comment" id="create"/>
-                <label for="create">Create Comment</label>
-                <button type="submit">submit</button>
-            </form>
-        </div>
-    </div>
-
-    </div>
-       
