--- a/views/results.ejs
+++ b/views/results.ejs
@@ -24,7 +24,7 @@
                 
                 <div class="col text-center mb-3 flex-wrap">
 
-                    <li class="col"><a class="text-white flex-wrap" href='/anime/<%=anime.mal_id%>'><%=anime.title%></a></li>
+                    <li class="col"><a class="text-white flex-wrap" href='/anime/<%=anime.mal_id%>'><p class="animeTitle" data-text="<%=anime.title%>"><%=anime.title%></p></a></li>
                     <img class="col" src="<%=anime.images.jpg.image_url%>"/></li>
                     
                 </div>
