added a hover to show what you're hovering on the results page

--- a/views/results.ejs
+++ b/views/results.ejs
@@ -13,7 +13,7 @@
 
 <h1 class="text-center">You have just searched:</h1>
 
-<div class="container myResult flex-wrap">
+<div class="container myResult flex-wrap>
     
     
     <ul class="unorderedList ">
@@ -22,7 +22,7 @@
             <% anime.forEach(anime => {%>
                 
                 
-                <div class="col text-center mb-3 flex-wrap">
+                <div class="col text-center mb-3 flex-wrap btn-dark">
 
                     <li class="col"><a class="text-white flex-wrap" href='/anime/<%=anime.mal_id%>'><p class="animeTitle" data-text="<%=anime.title%>"><%=anime.title%></p></a></li>
                     <img class="col" src="<%=anime.images.jpg.image_url%>"/></li>
