readme update with deployment and installation instructions

--- a/views/results.ejs
+++ b/views/results.ejs
@@ -18,7 +18,7 @@
     
     <ul class="unorderedList">
         <div class="row row-cols-4">
-            
+            <!-- Shows multiple results and able to click on the link that'll redirect you to the details page -->
             <% anime.forEach(anime => {%>
                 
                 
